<resources>
    <string name="app_name">2_screens</string>
    <string name="vs">VS</string>
    <string name="your_game_is_title">your game is:</string>
    <string name="go_back">go back</string>
    <string name="team_1_logo">team 1 logo</string>
    <string name="team_2_logo">team_2_logo</string>


    <string-array name="types_of_game">
        <item>Close game</item>
        <item>Great comeback</item>
        <item>Good teams</item>
        <item>personal performance</item>
<!--        <item>Pick for me</item>-->
    </string-array>

</resources>